--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <! DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<meta charset="UTF-8">
+		<title>Klonowanie repozytorium zdalnego</title>
+	</head>
 	<body></body>
 </html>
