Add structure to the body section

--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
 		<meta charset="UTF-8">
 		<title>Klonowanie repozytorium zdalnego</title>
 	</head>
-	<body></body>
+	<body>
+		<header></header>
+		<section></section>
+		<section></section>
+		<footer></footer>
+	</body>
 </html>
