Add nav in header section, add h1 headers in sections

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
 		<title>Klonowanie repozytorium zdalnego</title>
 	</head>
 	<body>
-		<header></header>
-		<section></section>
-		<section></section>
+		<header>
+			<nav></nav>
+		</header>
+		<section>
+			<h1></h1>
+		</section>
+		<section>
+			<h1></h1>
+		</section>
 		<footer></footer>
 	</body>
 </html>
